<resources>
    <string name="app_name">Calculadora Junio</string>
    <string name="action_settings">Settings</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonSumar">+</string>
    <string name="buttonRestar">-</string>
    <string name="buttonMultiplicar">*</string>
    <string name="buttonDividir">/</string>
    <string name="buttonMasMenos">+/-</string>
    <string name="buttonPunto">.</string>
    <string name="buttonIgual">=</string>
    <string name="buttonLimpiar">C</string>
    <string name="buttonRaiz">√</string>
    <string name="buttonElevado">x²</string>
    <string name="buttonInvertir">1/x</string>
    <string name="buttonPorcentaje">%</string>
    <string name="buttonSin">sin</string>
    <string name="buttonCos">cos</string>
    <string name="buttonTan">tan</string>
    <string name="dividir">/</string>
    <string name="del">del</string>
</resources>
