<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewDisplay"
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:gravity="bottom"
        android:padding="10dp"
        android:text="@string/button0"
        android:textAlignment="textEnd"
        android:textColor="@android:color/black"
        android:textSize="28sp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="431dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonLimpiar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttonborder"
                android:text="@string/buttonLimpiar"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_weight="1"
                android:background="@drawable/buttonborder"
                android:text="@string/button7"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttonborder"
                android:text="@string/button4"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttonborder"
                android:text="@string/button1"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonMasMenos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttonborder"
                android:text="@string/buttonMasMenos"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonDel"
                style="@android:style/Widget.Material.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/buttonborder"
                android:text="@string/del"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/buttonborder"
                android:text="@string/button8"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/buttonborder"
                android:text="@string/button5"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/buttonborder"
                android:text="@string/button2"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
                android:textSize="20sp" />


            <Button
                android:id="@+id/button0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/buttonborder"
                android:text="@string/button0"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonDividir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/buttonborder"
                android:text="@string/buttonDividir"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/buttonborder"
                android:text="@string/button9"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/buttonborder"
                android:text="@string/button6"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/buttonborder"
                android:text="@string/button3"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonPunto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/buttonborder"
                android:text="@string/buttonPunto"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <Button
                android:id="@+id/buttonMultiplicar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/buttonborder"
                android:text="@string/buttonMultiplicar"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
                android:textSize="20sp"
                tools:text="x" />

            <Button
                android:id="@+id/buttonRestar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/buttonborder"
                android:text="@string/buttonRestar"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonSumar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/buttonborder"
                android:text="@string/buttonSumar"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonIgual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3.38"
                android:background="@drawable/buttonborderequal"
                android:text="@string/buttonIgual"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>